# diffusion_posterior_tutorial

./: .gitignore  README.md  pyproject.toml
data/: galaxies.pt  mistery_galaxy_obs.pt  true_mistery_galaxy.pt
notebooks/: diffusion_blobs_demo_FINAL.ipynb  diffusion_posterior_sampling.ipynb
src/diffusion_posterior_tutorial/: __init__.py  lensing.py  sampling.py  viz.py  workshop_ops.py
tests/: test_lensing.py  test_sampling_history.py  test_workshop_ops.py
